Заменил new ArrayList<>(Arrays.asList) на List.of